ViTables ChangeLog
==================
** January 25, 2011 **
Several files (mainly example scripts) have been updated.

** January 24, 2011 **
Fixed a bug in the startup settings of ViTables.

** January 22, 2011 **
The process for building documentation has been refined.

** January 20, 2011 **
The copyright statement has been updated.

The setup.py script has changed.

Applied a workaround to a PyQt4 4.8.2 bug.

Fixed some minor bugs regarding plugins.

** January 18, 2011 **
Fixed some minor issues in the creation of the Windows installer.

** January 17, 2011 **
Fine tuning the building process of the Windows installer.

Updated several files required for building the Windows installer.

** December 18, 2010 **
More advances in the migration path to Python 3.0.

** December 11, 2010 **
More advances in the migration path to Python 3.0.

** December 09, 2010 **
String formatting is done via .format() method now.

** December 08, 2010 **
Moved to Python 2.6 :-) and preparing the migration path to Python 3.0.

** December 07, 2010 **
The project documentation has been updated. And now it is built via Sphinx.

** December 03, 2010 **
The node selection behavior of the tree of databases has been improved.

** December 01, 2010 **
Fixed some small problems in several files.

** November 30, 2010 **
Customised models have been debugged and fine tuned using modtest.py.

** November 28, 2010 **
The docstrings of the whole package have been updated.

** November 24, 2010 **
super() is used now in the ctor of all classes derived from PyQt4.

The csv plugin has been debugged and refactored.

** November 20, 2010 **
The module vtapp.py has been split into 2 modules.

** November 17, 2010 **
Qt properties of QActions set via keyword arguments at creation time.

** November 16, 2010 **
Some improvements applied to vtapp.py module.

Some small improvements have been made to several modules.

Several methods renamed to shorter names. Fixed a small bug.
